iot-k8s-main/argocd/applications/cluster-bootstrap-stage1-config/iotistica-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: iotistica-gateway
  namespace: envoy-gateway-system   # same namespace as your Envoy Gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    cert-manager.io/common-name: "*.iotistica.com"
spec:
  gatewayClassName: envoy
  listeners:
    - name: mqtt
      protocol: TCP
      port: 1883
      allowedRoutes:
        namespaces:
          from: All
    - name: postgres
      protocol: TCP
      port: 5432
      allowedRoutes:
        namespaces:
          from: All
    - name: mqtt-tls
      protocol: TLS
      port: 8883
      hostname: "*.iotistica.com"
      tls:
        mode: Passthrough
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      hostname: "*.iotistica.com"
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: iot-https-prod-cert
      allowedRoutes:
        namespaces:
          from: All
